--- a/pom.xml
+++ b/pom.xml
@@ -66,4 +66,16 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
+    <distributionManagement>
+  <!-- use the following if you're not using a snapshot version. -->
+        <repository>
+            <id>repo</id>
+            <url>https://Filirom1@github.com/Filirom1/filirom1-mvn-repo.git/raw/master/releases</url>
+        </repository>
+  <!-- use the following if you ARE using a snapshot version. -->
+        <snapshotRepository>
+            <id>snapshot-repo</id>
+            <url>https://Filirom1@github.com/Filirom1/filirom1-mvn-repo.git/raw/master/snapshots</url>
+        </snapshotRepository>
+    </distributionManagement>
 </project>
